--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,12 +12,12 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: SmartCLIDE-addons
+        uses: actions/checkout@v3
       - name: Build Docker Image
         run: |
           # login to GitHub Container Registry
           echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
           # build image
           docker build . --tag ghcr.io/eclipse-opensmartclide/smartclide/jbpm:$(date +'%Y-%m-%d')
+          # push image
+          docker push ghcr.io/eclipse-opensmartclide/smartclide/jbpm:$(date +'%Y-%m-%d').pr
