--- a/droolsjbpm-integration-opensmartclide/jbpm-simulation/pom.xml
+++ b/droolsjbpm-integration-opensmartclide/jbpm-simulation/pom.xml
@@ -55,8 +55,8 @@
       <artifactId>org.eclipse.bpmn2</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.json</groupId>
-      <artifactId>json</artifactId>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
