Change pom.xml that use jbpm-simulation to use new package

--- a/kie-wb-common-cli/kie-wb-common-cli-tools/kie-wb-common-cli-system-to-space-configuration-migration/pom.xml
+++ b/kie-wb-common-cli/kie-wb-common-cli-tools/kie-wb-common-cli-system-to-space-configuration-migration/pom.xml
@@ -158,7 +158,8 @@
     </dependency>
     <dependency>
       <groupId>org.drools</groupId>
-      <artifactId>jbpm-simulation</artifactId>
+      <artifactId>jbpm-simulation-opensmartclide</artifactId>
+      <version>7.61.0.Final</version>
     </dependency>
     <dependency>
       <groupId>org.eclipse</groupId>
