--- a/droolsjbpm-integration-opensmartclide/jbpm-simulation/pom.xml
+++ b/droolsjbpm-integration-opensmartclide/jbpm-simulation/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>droolsjbpm-integration</artifactId>
     <version>7.61.0.Final</version>
   </parent>
-  <artifactId>jbpm-simulation</artifactId>
+  <artifactId>jbpm-simulation-opensmartclide</artifactId>
   <name>jBPM Simulation</name>
 
   <properties>
