--- a/kie-wb-common-forms/kie-wb-common-forms-integration-tests/pom.xml
+++ b/kie-wb-common-forms/kie-wb-common-forms-integration-tests/pom.xml
@@ -58,7 +58,8 @@
 
     <dependency>
       <groupId>org.drools</groupId>
-      <artifactId>jbpm-simulation</artifactId>
+      <artifactId>jbpm-simulation-opensmartclide</artifactId>
+      <version>7.61.0.Final</version>
     </dependency>
 
     <dependency>
