--- a/kie-wb-common-forms/kie-wb-common-forms-integrations/kie-wb-common-forms-jbpm-integration/kie-wb-common-forms-jbpm-integration-backend/pom.xml
+++ b/kie-wb-common-forms/kie-wb-common-forms-integrations/kie-wb-common-forms-jbpm-integration/kie-wb-common-forms-jbpm-integration-backend/pom.xml
@@ -297,7 +297,8 @@
 
     <dependency>
       <groupId>org.drools</groupId>
-      <artifactId>jbpm-simulation</artifactId>
+      <artifactId>jbpm-simulation-opensmartclide</artifactId>
+      <version>7.61.0.Final</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
